syntax = "proto3";

package v2ray.core.proxy.ssh;
option csharp_namespace = "V2Ray.Core.Proxy.SSH";
option go_package = "github.com/v2fly/v2ray-core/v5/proxy/ssh";
option java_package = "com.v2ray.core.proxy.ssh";
option java_multiple_files = true;

import "common/protoext/extensions.proto";
import "common/net/address.proto";

message Config {
  option (v2ray.core.common.protoext.message_opt).type = "outbound";
  option (v2ray.core.common.protoext.message_opt).short_name = "ssh";

  v2ray.core.common.net.IPOrDomain address = 1;
  uint32 port = 2;
  string user = 3;
  string password = 4;
  string private_key = 5;
  string public_key = 6;
  repeated string host_key_algorithms = 7;
  string client_version = 8;
  uint32 user_level = 9;
}
